Objects that emit light do not appear in light groups. #96978

Closed
opened 2022-04-02 13:03:31 +02:00 by Alaska · 5 comments
Member

System Information
Operating system: Linux-5.16.0-5-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-02 04:22, hash: a567bef5cc
Worked: In a previous revision of D12871: Cycles: Light Groups

Short description of error
Objects that emit light, such as the world shader or an object with an emission shader, will not appear in their respective light group render layer.

Exact steps for others to reproduce the error

  1. Change the render engine to Cycles.
  2. Add a light group to the render layers.
  3. Add a light emitting thing to the scene and place it in the view of the camera.
  4. Add the light emitting things to the light group
  5. Render the scene. Notice that the light emitting thing is not visible in the light group render layer.

Here is a file that has done steps 1-4 for you. It has two light groups "World Shader" and "Light Object" to show off two different types of light emitting objects not being visible in the light group render layers.
#96978 - Light group objects invisible.blend

**System Information** Operating system: Linux-5.16.0-5-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-02 04:22, hash: `a567bef5cc` Worked: In a previous revision of [D12871: Cycles: Light Groups](https://archive.blender.org/developer/D12871) **Short description of error** Objects that emit light, such as the world shader or an object with an emission shader, will not appear in their respective light group render layer. **Exact steps for others to reproduce the error** 1. Change the render engine to Cycles. 2. Add a light group to the render layers. 3. Add a light emitting thing to the scene and place it in the view of the camera. 4. Add the light emitting things to the light group 5. Render the scene. Notice that the light emitting thing is not visible in the light group render layer. Here is a file that has done steps 1-4 for you. It has two light groups "World Shader" and "Light Object" to show off two different types of light emitting objects not being visible in the light group render layers. [#96978 - Light group objects invisible.blend](https://archive.blender.org/developer/F12964452/T96978_-_Light_group_objects_invisible.blend)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Author
Member

CC @LukasStockner - Can you take a look at this?

CC @LukasStockner - Can you take a look at this?
Lukas Stockner self-assigned this 2022-04-02 16:58:12 +02:00

This issue was referenced by 79ff65d07b

This issue was referenced by 79ff65d07bac0ecf0170542f86dc03a0228b53d5
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96978
No description provided.