Fix T96978: Objects that emit light do not appear in light groups

The initial commit only wrote direct and indirect lighting into the lightgroup passes,
but not rays that directly hit the light source itself.